fixed bugs on ending game